# RunTask

./: .gitignore  CMakeLists.txt  ReadMe.md  RunTask.cpp  RunTask.h  RunTask.ini  TaskRunable.hpp  main.cpp
include/: LPFileOperator.hpp  RunTask.h  TaskRunable.hpp
src/: RunTask.cpp  main.cpp
